<resources>
    <string name="app_name">TodoLTD</string>
    <string name="register">REGISTER</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="fullname">Fullname</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="search_here" translatable="false">Search here...</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="wrong_email_format">Wrong email format</string>
    <string name="email_not_exist">Email is not exist</string>
    <string name="wrong_password">Wrong password login</string>
    <string name="password_not_match">Password not match</string>
    <string name="min_8_characters_upper_lower_case_numbers_special_characters">Min 8 characters upper, lower case, numbers, special characters</string>
    <string name="successfully">Successful register</string>
    <string name="have_account_go_to_login">Have account go to login</string>
    <string name="login_fail">Login fail</string>
    <string name="check_email_pass">Check email and password</string>
    <string name="try_again">Try again</string>
    <string name="check_info_login">Check again email and password!</string>
</resources>